Fix overflowing

--- a/src/views/Header/index.scss
+++ b/src/views/Header/index.scss
@@ -1,5 +1,6 @@
 header {
   width: 100%;
+  max-height: 78px;
   display: flex;
   flex-direction: column;
   align-items: center;
